# school2024-test-task6

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  ConsoleApp.cpp  Disbalance.java  ImbalanceSensor.py  Main.java  Manager.java  README.md  TimeBalanceAnalyzer.java  TimeEntry.java  Worker.java  config.json  config.py  get_result.bat  main.py  new_test.py  organization.py  pom.xml  report.txt  result.txt  solution.cpp  solution.py
ImbalanceAnalyzer/: Program.cs  Result.cs  ResultCompiler.cs  ResultWriter.cs
ImbalanceAnalyzer/Result/: ResultCompiler.cs  ResultRecord.cs
ImbalanceAnalyzer/TSR3/: ParsedTsr3.cs  Tsr3Parser.cs  Tsr3Record.cs
Solution/: Disbalance.java  Main.java  TimeEntry.java
TestCroc/: pom.xml
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  result.txt
build_release/: CMakeCache.txt  Imbalance_monitoring  Makefile  cmake_install.cmake
launching/: report.txt  result.txt  СROС-TEST.cpp
src/: Employee.java  EmployeeHandler.java  FileHandler.java  FileManager.java  Main.java  ProgramTests.java  TimeAnalyzer.java  decorators.py  exceptions.py  lib.rs  main.cpp  main.rs  model.rs  report.txt  solution.py  tools.cpp  tools.h  tsr3.rs  util.rs
src/Solution/: Disbalance.java  Main.java  TimeEntry.java
src/abstractions/: Report.java
src/entities/: Employee.java
src/interfaces/: Writable.java
src/main/java/: FileHandler.java  Main.java  TimeBalanceAnalyzer.java
src/reporting/: DisbalanceReport.java
src/resources/: report.txt
src/test/java/: TimeBalanceAnalyzerTest.java
test/: TestImbalanceSensor.py  test_data.py
(+33 files in other folders)
